# laptop-intelligence-engine

./: .env.example  .flake8  README.md  docker-compose.yml  pyproject.toml
ai_services/: Dockerfile
ai_services/src/: main.py
ai_services/src/core/: config.py  database.py
ai_services/src/services/: database_services.py  langchain_tools.py  langgraph_agent.py
ai_services/test/: test_full_agent.py  test_individual_tools.py  test_vector_search.py
backend/: Dockerfile  database_schema.sql
backend/data/vector_db/: chroma.sqlite3
backend/scripts/: index_vector_data.py
backend/src/app/: main.py
backend/src/app/config/: ai_config.py
backend/src/app/core/: db.py
backend/src/app/models/: laptop.py  price_snapshot.py  questions_answer.py  review.py  specification.py  views.py
backend/src/app/schemas/: laptop.py
backend/src/app/services/: database_services.py  langgraph_agent.py  llm_service.py  vector_service.py
backend/src/utils/logger/: logging.py
backend/tests/: debug_lenovo.py  test_hp_scraping.py  test_lenovo_scraping.py  test_scraping.py  test_vector_search.py
data/processed/: db_backup.sql
docs/: api.md  database-schema.md
frontend/: Dockerfile  next.config.ts
frontend/src/app/: page.tsx
frontend/src/app/laptops/[id]/: page.tsx
frontend/src/components/domain/: PriceList.tsx  ProductCard.tsx  ReviewList.tsx  SpecTable.tsx
frontend/src/components/ui/: Card.tsx  ChatWidget.tsx
scripts/: consolidated_specs.py  database_reset_script.py  ingest_data.py  integrated_scraper.py  lenovo_scraper.py  sample_data_loader.py  scrape_live_data.py  structure_data.py
