[project]
name = "laptop-intelligence-engine"
version = "0.1.0"
dependencies = [
    # ---- Backend API Dependencies ----
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "pydantic-settings",
    "loguru",

    # ---- Data Ingestion Script Dependencies ----
    "requests",
    "playwright",
    "beautifulsoup4",
    "PyMuPDF",

    # ---- LLM Dependency----
    "openai",

    # ---- Additional Scraping Dependencies ----
    "fake-useragent",
    "python-dateutil",
    
    # ---- Vector Database & Embeddings ----
    "chromadb",
    "fastembed",
    "sentence-transformers",

    # ---- LangChain Framework ----
    "langchain",
    "langchain-openai",
    "langgraph",
    "langchain-community",
]